# netbox-custom-objects-tab

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
netbox_custom_objects_tab/: __init__.py  urls.py  views.py
netbox_custom_objects_tab/templates/netbox_custom_objects_tab/: custom_objects_tab.html  custom_objects_tab_partial.html
netbox_custom_objects_tab/templates/netbox_custom_objects_tab/combined/: tab.html  tab_partial.html
netbox_custom_objects_tab/templates/netbox_custom_objects_tab/typed/: tab.html
netbox_custom_objects_tab/views/: __init__.py  combined.py  typed.py
tests/: conftest.py  settings.py  test_register_tabs.py  test_views_combined.py  test_views_init.py  test_views_typed_smoke.py
