[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-custom-objects-tab"
version = "2.0.1"
description = "NetBox plugin that adds a Custom Objects tab to object detail pages"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Jan Krupa", email = "jan.krupa@cesnet.cz"},
]
keywords = ["netbox", "plugin", "custom-objects"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Topic :: System :: Networking",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "ruff", "django-tables2"]

[project.urls]
Homepage = "https://github.com/CESNET/netbox-custom-objects-tab"
Issues = "https://github.com/CESNET/netbox-custom-objects-tab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_custom_objects_tab*"]

[tool.setuptools.package-data]
netbox_custom_objects_tab = ["**/*", "templates/**"]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
